src/ParM.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParM.y
-----------------------------------------------------------------------------

state 34 contains 1 shift/reduce conflicts.
state 35 contains 1 shift/reduce conflicts.
state 36 contains 1 shift/reduce conflicts.
state 38 contains 1 shift/reduce conflicts.
state 46 contains 1 shift/reduce conflicts and 1 reduce/reduce conflicts.
state 51 contains 1 shift/reduce conflicts.
state 65 contains 1 shift/reduce conflicts and 1 reduce/reduce conflicts.
state 66 contains 1 shift/reduce conflicts.
state 71 contains 1 shift/reduce conflicts.
state 78 contains 1 shift/reduce conflicts and 1 reduce/reduce conflicts.
state 83 contains 1 shift/reduce conflicts.
state 119 contains 1 shift/reduce conflicts.
state 120 contains 1 shift/reduce conflicts.
state 121 contains 1 shift/reduce conflicts.
state 123 contains 1 shift/reduce conflicts.
state 204 contains 1 shift/reduce conflicts.
state 212 contains 1 shift/reduce conflicts.
state 220 contains 1 shift/reduce conflicts.
state 221 contains 1 shift/reduce conflicts.
state 222 contains 1 shift/reduce conflicts.
state 223 contains 1 shift/reduce conflicts.
state 228 contains 1 shift/reduce conflicts.
state 229 contains 1 shift/reduce conflicts.
state 230 contains 1 shift/reduce conflicts.
state 232 contains 1 shift/reduce conflicts.
state 233 contains 1 shift/reduce conflicts.
state 261 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProg -> Prog                               (0)
	%start_pBlock -> Block                             (1)
	%start_pDeclarations -> Declarations               (2)
	%start_pDeclaration -> Declaration                 (3)
	%start_pVar_declaration -> Var_declaration         (4)
	%start_pVar_specs -> Var_specs                     (5)
	%start_pMore_var_specs -> More_var_specs           (6)
	%start_pVar_spec -> Var_spec                       (7)
	%start_pArray_dimensions -> Array_dimensions       (8)
	%start_pType -> Type                               (9)
	%start_pFun_declaration -> Fun_declaration         (10)
	%start_pFun_block -> Fun_block                     (11)
	%start_pParam_list -> Param_list                   (12)
	%start_pParameters -> Parameters                   (13)
	%start_pMore_parameters -> More_parameters         (14)
	%start_pBasic_declaration -> Basic_declaration     (15)
	%start_pBasic_array_dimensions -> Basic_array_dimensions   (16)
	%start_pData_declaration -> Data_declaration       (17)
	%start_pCons_declarations -> Cons_declarations     (18)
	%start_pMore_cons_decl -> More_cons_decl           (19)
	%start_pCons_decl -> Cons_decl                     (20)
	%start_pType_list -> Type_list                     (21)
	%start_pMore_type -> More_type                     (22)
	%start_pProgram_body -> Program_body               (23)
	%start_pFun_body -> Fun_body                       (24)
	%start_pProg_stmts -> Prog_stmts                   (25)
	%start_pProg_stmt -> Prog_stmt                     (26)
	%start_pLocation -> Location                       (27)
	%start_pCase_list -> Case_list                     (28)
	%start_pMore_case -> More_case                     (29)
	%start_pCase -> Case                               (30)
	%start_pVar_list -> Var_list                       (31)
	%start_pVar_list1 -> Var_list1                     (32)
	%start_pMore_var_list -> More_var_list             (33)
	%start_pExpr -> Expr                               (34)
	%start_pBint_term -> Bint_term                     (35)
	%start_pBint_factor -> Bint_factor                 (36)
	%start_pCompare_op -> Compare_op                   (37)
	%start_pInt_expr -> Int_expr                       (38)
	%start_pAddop -> Addop                             (39)
	%start_pInt_term -> Int_term                       (40)
	%start_pMulop -> Mulop                             (41)
	%start_pInt_factor -> Int_factor                   (42)
	%start_pModifier_list -> Modifier_list             (43)
	%start_pFun_argument_list -> Fun_argument_list     (44)
	%start_pCons_argument_list -> Cons_argument_list   (45)
	%start_pArguments -> Arguments                     (46)
	%start_pMore_arguments -> More_arguments           (47)
	Integer -> L_integ                                 (48)
	Double -> L_doubl                                  (49)
	Char -> L_charac                                   (50)
	CID -> L_CID                                       (51)
	ID -> L_ID                                         (52)
	Prog -> Block                                      (53)
	Block -> Declarations Program_body                 (54)
	Declarations -> Declaration ';' Declarations       (55)
	Declarations ->                                    (56)
	Declaration -> Var_declaration                     (57)
	Declaration -> Fun_declaration                     (58)
	Declaration -> Data_declaration                    (59)
	Var_declaration -> 'var' Var_specs ':' Type        (60)
	Var_specs -> Var_spec More_var_specs               (61)
	More_var_specs -> ',' Var_spec More_var_specs      (62)
	More_var_specs ->                                  (63)
	Var_spec -> Array_dimensions                       (64)
	Array_dimensions -> '[' Expr ']' Array_dimensions   (65)
	Array_dimensions ->                                (66)
	Type -> 'int'                                      (67)
	Type -> 'real'                                     (68)
	Type -> 'bool'                                     (69)
	Type -> 'char'                                     (70)
	Type -> ID                                         (71)
	Fun_declaration -> 'fun' ID Param_list ':' Type '{' Fun_block '}'   (72)
	Fun_block -> Declarations Fun_body                 (73)
	Param_list -> '(' Parameters ')'                   (74)
	Parameters -> Basic_declaration More_parameters    (75)
	Parameters ->                                      (76)
	More_parameters -> ',' Basic_declaration More_parameters   (77)
	More_parameters ->                                 (78)
	Basic_declaration -> ID Basic_array_dimensions ':' Type   (79)
	Basic_array_dimensions -> '[' ']' Basic_array_dimensions   (80)
	Basic_array_dimensions ->                          (81)
	Data_declaration -> 'data' ID ':=' Cons_declarations   (82)
	Cons_declarations -> Cons_decl More_cons_decl      (83)
	More_cons_decl -> '|' Cons_decl More_cons_decl     (84)
	More_cons_decl ->                                  (85)
	Cons_decl -> CID 'of' Type_list                    (86)
	Cons_decl -> CID                                   (87)
	Type_list -> Type More_type                        (88)
	More_type -> '*' Type More_type                    (89)
	More_type ->                                       (90)
	Program_body -> 'begin' Prog_stmts 'end'           (91)
	Program_body -> Prog_stmts                         (92)
	Fun_body -> 'begin' Prog_stmts 'return' Expr ';' 'end'   (93)
	Fun_body -> Prog_stmts 'return' Expr ';'           (94)
	Prog_stmts -> Prog_stmt ';' Prog_stmts             (95)
	Prog_stmts ->                                      (96)
	Prog_stmt -> 'if' Expr 'then' Prog_stmt 'else' Prog_stmt   (97)
	Prog_stmt -> 'while' Expr 'do' Prog_stmt           (98)
	Prog_stmt -> 'read' Location                       (99)
	Prog_stmt -> Location ':=' Expr                    (100)
	Prog_stmt -> 'print' Expr                          (101)
	Prog_stmt -> '{' Block '}'                         (102)
	Prog_stmt -> 'case' Expr 'of' '{' Case_list '}'    (103)
	Location -> ID Array_dimensions                    (104)
	Case_list -> Case More_case                        (105)
	More_case -> '|' Case More_case                    (106)
	More_case ->                                       (107)
	Case -> CID Var_list '=>' Prog_stmt                (108)
	Var_list -> '(' Var_list1 ')'                      (109)
	Var_list ->                                        (110)
	Var_list1 -> ID More_var_list                      (111)
	More_var_list -> ',' ID More_var_list              (112)
	More_var_list ->                                   (113)
	Expr -> Expr '||' Bint_term                        (114)
	Expr -> Bint_term                                  (115)
	Bint_term -> Bint_term '&&' Bint_factor            (116)
	Bint_term -> Bint_factor                           (117)
	Bint_factor -> 'not' Bint_factor                   (118)
	Bint_factor -> Int_expr Compare_op Int_expr        (119)
	Bint_factor -> Int_expr                            (120)
	Compare_op -> '='                                  (121)
	Compare_op -> '<'                                  (122)
	Compare_op -> '>'                                  (123)
	Compare_op -> '=<'                                 (124)
	Compare_op -> '>='                                 (125)
	Int_expr -> Int_expr Addop Int_term                (126)
	Int_expr -> Int_term                               (127)
	Addop -> '+'                                       (128)
	Addop -> '-'                                       (129)
	Int_term -> Int_term Mulop Int_factor              (130)
	Int_term -> Int_factor                             (131)
	Mulop -> '*'                                       (132)
	Mulop -> '/'                                       (133)
	Int_factor -> '(' Expr ')'                         (134)
	Int_factor -> 'size' '(' ID Basic_array_dimensions ')'   (135)
	Int_factor -> 'float' '(' Expr ')'                 (136)
	Int_factor -> 'floor' '(' Expr ')'                 (137)
	Int_factor -> 'ceil' '(' Expr ')'                  (138)
	Int_factor -> ID Modifier_list                     (139)
	Int_factor -> Cons_argument_list                   (140)
	Int_factor -> Integer                              (141)
	Int_factor -> Double                               (142)
	Int_factor -> 'true'                               (143)
	Int_factor -> 'false'                              (144)
	Int_factor -> Char                                 (145)
	Int_factor -> '-' Int_factor                       (146)
	Modifier_list -> Fun_argument_list                 (147)
	Modifier_list -> Array_dimensions                  (148)
	Fun_argument_list -> '(' Arguments ')'             (149)
	Cons_argument_list -> Fun_argument_list            (150)
	Cons_argument_list ->                              (151)
	Arguments -> Expr More_arguments                   (152)
	Arguments ->                                       (153)
	More_arguments -> ',' Expr More_arguments          (154)
	More_arguments ->                                  (155)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'&&'           { PT _ (TS _ 1) }
	'('            { PT _ (TS _ 2) }
	')'            { PT _ (TS _ 3) }
	'*'            { PT _ (TS _ 4) }
	'+'            { PT _ (TS _ 5) }
	','            { PT _ (TS _ 6) }
	'-'            { PT _ (TS _ 7) }
	'/'            { PT _ (TS _ 8) }
	':'            { PT _ (TS _ 9) }
	':='           { PT _ (TS _ 10) }
	';'            { PT _ (TS _ 11) }
	'<'            { PT _ (TS _ 12) }
	'='            { PT _ (TS _ 13) }
	'=<'           { PT _ (TS _ 14) }
	'=>'           { PT _ (TS _ 15) }
	'>'            { PT _ (TS _ 16) }
	'>='           { PT _ (TS _ 17) }
	'['            { PT _ (TS _ 18) }
	']'            { PT _ (TS _ 19) }
	'begin'        { PT _ (TS _ 20) }
	'bool'         { PT _ (TS _ 21) }
	'case'         { PT _ (TS _ 22) }
	'ceil'         { PT _ (TS _ 23) }
	'char'         { PT _ (TS _ 24) }
	'data'         { PT _ (TS _ 25) }
	'do'           { PT _ (TS _ 26) }
	'else'         { PT _ (TS _ 27) }
	'end'          { PT _ (TS _ 28) }
	'false'        { PT _ (TS _ 29) }
	'float'        { PT _ (TS _ 30) }
	'floor'        { PT _ (TS _ 31) }
	'fun'          { PT _ (TS _ 32) }
	'if'           { PT _ (TS _ 33) }
	'int'          { PT _ (TS _ 34) }
	'not'          { PT _ (TS _ 35) }
	'of'           { PT _ (TS _ 36) }
	'print'        { PT _ (TS _ 37) }
	'read'         { PT _ (TS _ 38) }
	'real'         { PT _ (TS _ 39) }
	'return'       { PT _ (TS _ 40) }
	'size'         { PT _ (TS _ 41) }
	'then'         { PT _ (TS _ 42) }
	'true'         { PT _ (TS _ 43) }
	'var'          { PT _ (TS _ 44) }
	'while'        { PT _ (TS _ 45) }
	'{'            { PT _ (TS _ 46) }
	'|'            { PT _ (TS _ 47) }
	'||'           { PT _ (TS _ 48) }
	'}'            { PT _ (TS _ 49) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_charac       { PT _ (TC $$) }
	L_CID          { PT _ (T_CID $$) }
	L_ID           { PT _ (T_ID $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProg    rule  0
	%start_pBlock   rule  1
	%start_pDeclarations rule  2
	%start_pDeclaration rule  3
	%start_pVar_declaration rule  4
	%start_pVar_specs rule  5
	%start_pMore_var_specs rule  6
	%start_pVar_spec rule  7
	%start_pArray_dimensions rule  8
	%start_pType    rule  9
	%start_pFun_declaration rule  10
	%start_pFun_block rule  11
	%start_pParam_list rule  12
	%start_pParameters rule  13
	%start_pMore_parameters rule  14
	%start_pBasic_declaration rule  15
	%start_pBasic_array_dimensions rule  16
	%start_pData_declaration rule  17
	%start_pCons_declarations rule  18
	%start_pMore_cons_decl rule  19
	%start_pCons_decl rule  20
	%start_pType_list rule  21
	%start_pMore_type rule  22
	%start_pProgram_body rule  23
	%start_pFun_body rule  24
	%start_pProg_stmts rule  25
	%start_pProg_stmt rule  26
	%start_pLocation rule  27
	%start_pCase_list rule  28
	%start_pMore_case rule  29
	%start_pCase    rule  30
	%start_pVar_list rule  31
	%start_pVar_list1 rule  32
	%start_pMore_var_list rule  33
	%start_pExpr    rule  34
	%start_pBint_term rule  35
	%start_pBint_factor rule  36
	%start_pCompare_op rule  37
	%start_pInt_expr rule  38
	%start_pAddop   rule  39
	%start_pInt_term rule  40
	%start_pMulop   rule  41
	%start_pInt_factor rule  42
	%start_pModifier_list rule  43
	%start_pFun_argument_list rule  44
	%start_pCons_argument_list rule  45
	%start_pArguments rule  46
	%start_pMore_arguments rule  47
	Integer         rule  48
	Double          rule  49
	Char            rule  50
	CID             rule  51
	ID              rule  52
	Prog            rule  53
	Block           rule  54
	Declarations    rules 55, 56
	Declaration     rules 57, 58, 59
	Var_declaration rule  60
	Var_specs       rule  61
	More_var_specs  rules 62, 63
	Var_spec        rule  64
	Array_dimensions rules 65, 66
	Type            rules 67, 68, 69, 70, 71
	Fun_declaration rule  72
	Fun_block       rule  73
	Param_list      rule  74
	Parameters      rules 75, 76
	More_parameters rules 77, 78
	Basic_declaration rule  79
	Basic_array_dimensions rules 80, 81
	Data_declaration rule  82
	Cons_declarations rule  83
	More_cons_decl  rules 84, 85
	Cons_decl       rules 86, 87
	Type_list       rule  88
	More_type       rules 89, 90
	Program_body    rules 91, 92
	Fun_body        rules 93, 94
	Prog_stmts      rules 95, 96
	Prog_stmt       rules 97, 98, 99, 100, 101, 102, 103
	Location        rule  104
	Case_list       rule  105
	More_case       rules 106, 107
	Case            rule  108
	Var_list        rules 109, 110
	Var_list1       rule  111
	More_var_list   rules 112, 113
	Expr            rules 114, 115
	Bint_term       rules 116, 117
	Bint_factor     rules 118, 119, 120
	Compare_op      rules 121, 122, 123, 124, 125
	Int_expr        rules 126, 127
	Addop           rules 128, 129
	Int_term        rules 130, 131
	Mulop           rules 132, 133
	Int_factor      rules 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146
	Modifier_list   rules 147, 148
	Fun_argument_list rule  149
	Cons_argument_list rules 150, 151
	Arguments       rules 152, 153
	More_arguments  rules 154, 155

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'begin'        reduce using rule 56
	'case'         reduce using rule 56
	'data'         shift, and enter state 149
	'fun'          shift, and enter state 166
	'if'           reduce using rule 56
	'print'        reduce using rule 56
	'read'         reduce using rule 56
	'var'          shift, and enter state 167
	'while'        reduce using rule 56
	'{'            reduce using rule 56
	L_ID           reduce using rule 56
	%eof           reduce using rule 56

	Prog           goto state 182
	Block          goto state 183
	Declarations   goto state 181
	Declaration    goto state 161
	Var_declarationgoto state 162
	Fun_declarationgoto state 163
	Data_declarationgoto state 165

State 1


	'begin'        reduce using rule 56
	'case'         reduce using rule 56
	'data'         shift, and enter state 149
	'fun'          shift, and enter state 166
	'if'           reduce using rule 56
	'print'        reduce using rule 56
	'read'         reduce using rule 56
	'var'          shift, and enter state 167
	'while'        reduce using rule 56
	'{'            reduce using rule 56
	L_ID           reduce using rule 56
	%eof           reduce using rule 56

	Block          goto state 180
	Declarations   goto state 181
	Declaration    goto state 161
	Var_declarationgoto state 162
	Fun_declarationgoto state 163
	Data_declarationgoto state 165

State 2


	'data'         shift, and enter state 149
	'fun'          shift, and enter state 166
	'var'          shift, and enter state 167
	%eof           reduce using rule 56

	Declarations   goto state 179
	Declaration    goto state 161
	Var_declarationgoto state 162
	Fun_declarationgoto state 163
	Data_declarationgoto state 165

State 3


	'data'         shift, and enter state 149
	'fun'          shift, and enter state 166
	'var'          shift, and enter state 167

	Declaration    goto state 178
	Var_declarationgoto state 162
	Fun_declarationgoto state 163
	Data_declarationgoto state 165

State 4


	'var'          shift, and enter state 167

	Var_declarationgoto state 177

State 5


	','            reduce using rule 66
	'['            shift, and enter state 83
	%eof           reduce using rule 66

	Var_specs      goto state 175
	Var_spec       goto state 176
	Array_dimensionsgoto state 172

State 6


	','            shift, and enter state 174
	%eof           reduce using rule 63

	More_var_specs goto state 173

State 7


	'['            shift, and enter state 83
	%eof           reduce using rule 66

	Var_spec       goto state 171
	Array_dimensionsgoto state 172

State 8


	'['            shift, and enter state 83
	%eof           reduce using rule 66

	Array_dimensionsgoto state 170

State 9


	'bool'         shift, and enter state 138
	'char'         shift, and enter state 139
	'int'          shift, and enter state 140
	'real'         shift, and enter state 141
	L_ID           shift, and enter state 76

	ID             goto state 135
	Type           goto state 169

State 10


	'fun'          shift, and enter state 166

	Fun_declarationgoto state 168

State 11


	'begin'        reduce using rule 56
	'case'         reduce using rule 56
	'data'         shift, and enter state 149
	'fun'          shift, and enter state 166
	'if'           reduce using rule 56
	'print'        reduce using rule 56
	'read'         reduce using rule 56
	'return'       reduce using rule 56
	'var'          shift, and enter state 167
	'while'        reduce using rule 56
	'{'            reduce using rule 56
	L_ID           reduce using rule 56

	Declarations   goto state 160
	Declaration    goto state 161
	Var_declarationgoto state 162
	Fun_declarationgoto state 163
	Fun_block      goto state 164
	Data_declarationgoto state 165

State 12


	'('            shift, and enter state 159

	Param_list     goto state 158

State 13


	L_ID           shift, and enter state 76
	%eof           reduce using rule 76

	ID             goto state 152
	Parameters     goto state 156
	Basic_declarationgoto state 157

State 14


	','            shift, and enter state 155
	%eof           reduce using rule 78

	More_parametersgoto state 154

State 15


	L_ID           shift, and enter state 76

	ID             goto state 152
	Basic_declarationgoto state 153

State 16


	'['            shift, and enter state 151
	%eof           reduce using rule 81

	Basic_array_dimensionsgoto state 150

State 17


	'data'         shift, and enter state 149

	Data_declarationgoto state 148

State 18


	L_CID          shift, and enter state 110

	CID            goto state 142
	Cons_declarationsgoto state 146
	Cons_decl      goto state 147

State 19


	'|'            shift, and enter state 145
	%eof           reduce using rule 85

	More_cons_decl goto state 144

State 20


	L_CID          shift, and enter state 110

	CID            goto state 142
	Cons_decl      goto state 143

State 21


	'bool'         shift, and enter state 138
	'char'         shift, and enter state 139
	'int'          shift, and enter state 140
	'real'         shift, and enter state 141
	L_ID           shift, and enter state 76

	ID             goto state 135
	Type           goto state 136
	Type_list      goto state 137

State 22


	'*'            shift, and enter state 134
	%eof           reduce using rule 90

	More_type      goto state 133

State 23

